--- a/neahtta/configs/language_specific_rules/templates/itwewina/crk/definition.template
+++ b/neahtta/configs/language_specific_rules/templates/itwewina/crk/definition.template
@@ -8,12 +8,12 @@
 #}
 
 {% block template_doc %}{% if TEMPLATE_DOC %}
-Customizations include: 
+Customizations include:
  - see includes.template
  - sorting by @rank attribute
 {% endif %}{% endblock %}
 
- 
+
 {% import 'lexicon.macros' as macros with context %}
 
 {% for meaning_group in lexicon_entry|xpath('./mg') %}
@@ -28,7 +28,8 @@ Customizations include:
 
     {% for translation_group in translation_groups %}
         {# TODO: is it possible to avoid having to pass the global context variables in here? #}
-        {{ templates.definition_text.render(translation_group=translation_group, _from=_from, _to=_to) }}
+        {{- templates.definition_text.render(translation_group=translation_group, _from=_from, _to=_to) -}}
+        {%- if not loop.last -%}; {% endif -%}
 
         {# TODO: examples should move to definition notes template,
            which will need to be rendered for each tg #}
