--- a/neahtta/configs/language_specific_rules/templates/itwewina/sources.template
+++ b/neahtta/configs/language_specific_rules/templates/itwewina/sources.template
@@ -14,13 +14,13 @@ Documenting Plains Cree dictionary sources
 <div class="container-fluid">
     <div class="marketing">
         <div class="row-fluid">
-            <h2 style="font-weight:300;" lang="{{ current_locale }}">{% trans %}Source material{% endtrans %}</h2>
+            <h2 style="font-weight:300;" lang="{{ current_locale }}">{% trans %}Source materials{% endtrans %}</h2>
         </div>
         <div class="row-fluid">
             <div class="span8">
                 <ul>
-                    <li><a href="http://uofrpress.ca/publications/cree-words">nêhiyawêwin : itwêwina / Cree: Words.</a> Compiled by Arok Wolvengrey. Regina: Canadian Plains
-                    Research Center, 2001.</li>
+                    <li>Maskwacîs Dictionary of Cree Words / Nehiyaw Pîkiskweninisa, Maskwachees Cultural College, Maskwacîs, 2009</li>
+                    <li><a href="http://uofrpress.ca/publications/cree-words">nêhiyawêwin : itwêwina / Cree: Words.</a> Compiled by Arok Wolvengrey. Regina: Canadian Plains Research Center, 2001.</li>
                 </ul>
             </div>
         </div>
