--- a/neahtta/configs/language_specific_rules/templates/itwewina/sources.template
+++ b/neahtta/configs/language_specific_rules/templates/itwewina/sources.template
@@ -19,8 +19,13 @@ Documenting Plains Cree dictionary sources
         <div class="row-fluid">
             <div class="span8">
                 <ul>
-                    <li>Maskwacîs Dictionary of Cree Words / Nehiyaw Pîkiskweninisa, Maskwachees Cultural College, Maskwacîs, 2009</li>
+                    <li>Maskwacîs Dictionary of Cree Words / Nehiyaw Pîkiskweninisa, Maskwachees Cultural College, Maskwacîs, 2009.</li>
                     <li><a href="http://uofrpress.ca/publications/cree-words">nêhiyawêwin : itwêwina / Cree: Words.</a> Compiled by Arok Wolvengrey. Regina: Canadian Plains Research Center, 2001.</li>
+                    <li>Spoken Dictionary of Maskwacîs Cree / nêhiyaw-pîkiskwewina maskwacîsihk (Described in: <a href="http://altlab.artsrn.ualberta.ca/wp-content/uploads/2019/01/Maskwacis_dictionary_recording_project_180609_SILS.pdf"><em>Towards a spoken dictionary of Maskwacîs Cree</em></a>,
+                 Mary Jean Littlechild, Louise Wildcat, Jerry Roasting, Harley Simon, Annette Lee, Arlene Makinaw,
+                 Rosie Rowan, Rose Makinaw, Kisikaw, Betty Simon, Brian Lightning, Brian Lee, Linda Oldpan, Miriam Buffalo, Debora Young, Ivy Raine, Paula Mackinaw,
+                 Norma Linda Saddleback, Renee Makinaw, Atticus Harrigan, Katherine Schmirler, Dustin Bowers, Megan Bontogon, Sarah Giesbrecht, Patricia Johnson,
+                 Timothy Mills, Jordan Lachler & Antti Arppe, Stabilizing Indigenous Languages Symposium (SILS), University of Lethbridge, 9 June 2018).</li>
                 </ul>
             </div>
         </div>
