Minor modifications towards lay people.

--- a/neahtta/configs/language_specific_rules/templates/itwewina/maskwacis-dictionary.template
+++ b/neahtta/configs/language_specific_rules/templates/itwewina/maskwacis-dictionary.template
@@ -18,6 +18,12 @@ Details about the Maskwacîs Dictionary source.
         </div>
         <div class="row-fluid">
             <div class="span8">
+            
+            <p>Maskwacîs Dictionary of Cree Words / Nehiyaw Pîkiskweninisa
+			<br>Maskwachees Cultural College, Maskwacîs, 2009
+
+			<p><b>Acknowledgements</b>
+
             <p>This dictionary was developed by the Cree Language
             Program of Maskwachees Cultural Collge. The chief
             developer was Linda S. Saddleback. In the work of
@@ -33,7 +39,7 @@ Details about the Maskwacîs Dictionary source.
             and Sharon Miller for technical production and
             advice. Walter Lightning is thanked for his continuing
             enthusiasm and encouragement.
-	    </p>
+		    </p>
             </div>
         </div>
     </div>
