--- a/neahtta/configs/language_specific_rules/templates/itwewina/eng/definition.template
+++ b/neahtta/configs/language_specific_rules/templates/itwewina/eng/definition.template
@@ -2,58 +2,49 @@
    and has access to all of the main entry-specific template values.
 
    Since the goal is definitions, `lexicon_entry` is relevant. Filtering
-   by target languag ehas to happen here, so be sure to use the
+   by target languages happens here, so be sure to use the
    `xml_lang` filter if overriding.
 
-   overrides here: 
+   Overrides here:
      - sorting by @rank attribute
      - remove target language filter of meaning groups
+     - remove examples
+
+    Reminder of what the XML source (lexicon_entry) looks like:
+
+      <e>
+        <lg xml:lang="eng">
+          <l pos="N">pow-wow</l>
+        </lg>
+        <mg>
+          <tg xml:lang="crk">
+            <!-- Entry in both, and broad gloss. -->
+            <trunc sources="MD">pow-wow dancing.</trunc>
+            <trunc sources="CW">the Grass Dance, pow-wow</trunc>
+            <t rank="1.0" pos="N">pwâtisimowin</t>
+          </tg>
+        </mg>
+      </e>
 
 #}
  
-{% import 'lexicon.macros' as macros with context %}
+{%- import 'lexicon.macros' as macros with context -%}
 
-{% for meaning_group in lexicon_entry|xpath('./mg')|sortby_xpath('./@rank') %}
+{%- for meaning_group in lexicon_entry|xpath('./mg')|sortby_xpath('./@rank') -%}
+    {%- set translation_groups = meaning_group|xpath('./tg') -%}
 
-    {% set translation_groups = meaning_group|xpath('./tg') %}
-
-    {% if translation_groups|count > 0 %}
+    {# Skip empty meaning groups. These shouldn't exist but ¯\_(ツ)_/¯ #}
+    {%- if translation_groups|count > 0 -%}
         <li>
-    {% else %}
-        {% continue %}
-    {% endif %}
+    {%- else -%}
+        {%- continue -%}
+    {%- endif -%}
 
-    {% for translation_group in translation_groups %}
+    {%- for translation_group in translation_groups -%}
         {# TODO: is it possible to avoid having to pass the global context variables in here? #}
         {{ templates.definition_text.render(translation_group=translation_group, _from=_from, _to=_to) }}
-
-        {# TODO: examples should move to definition notes template,
-           which will need to be rendered for each tg #}
-        {% set examples = meaning_group|xpath('./xg') or translation_group|xpath('./xg') %}
-
-        {% if examples %}
-            <div class="example_set">
-                <blockquote class="examples">
-                    <dl>
-                    {% for example in examples %}
-                        {% if example|xpath('@re') %}
-                            <dt lang="{{ _from }}">{{ example|xpath('./x')|first|text }} ({{ example|xpath('@re')|first }})</dt>
-                        {% else %}
-                            <dt lang="{{ _from }}">{{ example|xpath('./x')|first|text }}</dt>
-                        {% endif %}
-                        <dd lang="{{ _to }}">{{ example|xpath('./xt')|first|text }}</dd>
-                    {% endfor %}
-                    </dl>
-                </blockquote>
-            </div>
-        {% endif %}
-
-    {% endfor %}
-
-    {% set entry_source = lexicon_entry|xpath('@src')|first %}
-    {% if entry_source %}<span class="entry_source">{{ entry_source }}</span>{% endif %}</li>
-
-{% endfor %}
+    {%- endfor -%}
+{%- endfor -%}
 
 {#  vim: set ts=4 sw=4 tw=72 syntax=htmljinja : #}
 
