Add role=search for a11y.

--- a/neahtta/configs/language_specific_rules/templates/itwewina/index_search_form.template
+++ b/neahtta/configs/language_specific_rules/templates/itwewina/index_search_form.template
@@ -44,6 +44,7 @@ Customizations here:
                     <div class="input-append">
                 {% endif -%}
                     <input type="search"
+                           role="search"
                            name="lookup"
                            lang="{{ _from }}"
                            autocapitalize="off"
